[package]
name = "tinyproxy-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9.0"
url = "2.2"
anyhow = "1.0"
futures = "0.3"
dotenv = "0.15"