[package]
name = "tinyproxy-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"] }
log = "0.4"
env_logger = "0.9.0"
url = "2.3"
anyhow = "1.0"
futures = "0.3"
dotenv = "0.15"


[profile.release]
#opt-level = 'z'  # Optimize for size
opt-level = 3  # Optimize for speed
lto = true
codegen-units = 1
#panic = 'abort'
panic = 'unwind'
debug = true